--- a/api.html
+++ b/api.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="data"></div>
+    <div id="data">
+        <svg width="200px" height="200px"></svg>
+    </div>
     <script src="api.js"></script>
 </body>
 </html>
