Affiche des sections
Les boutons sont interactifs, on permet de changer les sections afficher

--- a/game.html
+++ b/game.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- STYLE -->
+    <link rel="stylesheet" href="game-style.css">
     <title>Document</title>
 </head>
 
@@ -15,8 +17,6 @@
     <h1></h1>
 
 
-    <section class="game">
-
         <div class="sirene">
             <p>Sirène img svg</p>
             <button class="part cerveau">Cerveau</button>
@@ -25,7 +25,7 @@
         </div>
         <!-- Conséquences -->
         <div class="situation">
-            <img src="" alt="">
+            <img src="img/situation/statistiques-oceans-developpement-durable.jpg" alt="">
             <div class="txt-game">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat sit voluptatibus laboriosam
                     similique amet nobis neque harum ducimus debitis. Vero quam fuga explicabo incidunt libero optio
@@ -39,13 +39,16 @@
         </div>
         <!-- Conséquences -->
         <div class="consequence">
-            <img src="" alt="">
-            <div class="txt-game"></div>
-            <div class="next-game"></div>
+            <img src="img/consequence/AdobeStock_249450930-scaled.jpeg" alt="">
+            <div class="txt-game">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis atque sint obcaecati accusantium mollitia itaque beatae repellendus exercitationem reiciendis numquam blanditiis sequi ipsam magni, recusandae iure sed a facere aut.</p>
+            </div>
+            <div class="next-game">
+                <button>Suivant</button>
+            </div>
 
         </div>
 
-    </section>
 
 
     <script src="game.js"></script>
