Affiche des sections
Les boutons sont interactifs, on permet de changer les sections afficher

--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
         </div>
         <!-- Conséquences -->
         <div class="situation">
-            <img src="" alt="">
+            <img src="img/situation/statistiques-oceans-developpement-durable.jpg" alt="">
             <div class="txt-game">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat sit voluptatibus laboriosam
                     similique amet nobis neque harum ducimus debitis. Vero quam fuga explicabo incidunt libero optio
