Bouton partie actif

--- a/game.html
+++ b/game.html
@@ -19,9 +19,9 @@
 
         <div class="sirene">
             <p>Sirène img svg</p>
-            <button class="part cerveau">Cerveau</button>
-            <button class="part poumon">Poumons</button>
-            <button class="part peau">Peau</button>
+            <button class="part brain active">Cerveau</button>
+            <button class="part lungs active">Poumons</button>
+            <button class="part skin active">Peau</button>
         </div>
         <!-- Conséquences -->
         <div class="situation">
@@ -32,9 +32,9 @@
                     ipsa minima placeat est?</p>
             </div>
             <div class="choice">
-                <button class="button-choice">Choix 1</button>
-                <button class="button-choice">Choix 2</button>
-                <button class="button-choice">Choix 3</button>
+                <button class="button-choice ">Choix 1</button>
+                <button class="button-choice ">Choix 2</button>
+                <button class="button-choice ">Choix 3</button>
             </div>
         </div>
         <!-- Conséquences -->
