--- a/game.html
+++ b/game.html
@@ -25,16 +25,15 @@
         </div>
         <!-- Conséquences -->
         <div class="situation">
-            <img src="img/situation/statistiques-oceans-developpement-durable.jpg" alt="">
+            <img src="" alt="">
             <div class="txt-game">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat sit voluptatibus laboriosam
                     similique amet nobis neque harum ducimus debitis. Vero quam fuga explicabo incidunt libero optio
                     ipsa minima placeat est?</p>
             </div>
             <div class="choice">
-                <button class="button-choice ">Choix 1</button>
-                <button class="button-choice ">Choix 2</button>
-                <button class="button-choice ">Choix 3</button>
+                <button class="button-choice choice1"></button>
+                <button class="button-choice choice2"></button>
             </div>
         </div>
         <!-- Conséquences -->
