--- a/game.html
+++ b/game.html
@@ -23,7 +23,7 @@
             <button class="part lungs active">Poumons</button>
             <button class="part skin active">Peau</button>
         </div>
-        <!-- Conséquences -->
+        <!-- Situation -->
         <div class="situation">
             <img src="img/situation/statistiques-oceans-developpement-durable.jpg" alt="">
             <div class="txt-game">
