--- a/api.html
+++ b/api.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="api.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div id="data">
-        <svg width="50px" height="50px"></svg>
+    <div class="loader">
+        <div class="block"></div>
+        <div class="ocean">
+            <div class="vagues">
+                <div class="vague" id="vague1"></div>
+                <div class="vague" id="vague2"></div>
+                <div class="vague" id="vague3"></div>
+            </div>
+        </div>
+        <h1>Informations météorologiques</h1>
+        <p id="texte"></p>
+        <div class="continuite"></div>
     </div>
-    <script src="api.js"></script>
+
+    <script>
+        const animation = [
+            { transform: "scaleY(0.6)" },
+            { transform: "scaleY(1)"},
+            { transform: "scaleY(0.6)" }
+        ]
+        const timing = {
+            duration: 3600,
+            iterations: Infinity,
+        }
+
+        document.querySelector('.vagues').style.transformOrigin='bottom'
+        document.querySelector('.vagues').animate(animation,timing)
+
+        document.getElementById('texte').innerHTML = 'Hauteur des vagues le 06/12/2024 :<br>0.6 m';
+    </script>
 </body>
+
 </html>
