section activités ajoutées

--- a/index.html
+++ b/index.html
@@ -9,17 +9,89 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="manrope">
 <div class="accueil">
     <h1>Mer Made</h1>
 </div>
 
 <section class="about">
     <img src="images/poissons.svg" alt="">
-    <h2>Race for water, c'est quoi ?</h2>
-    <p>Créée en 2010 par Marco Simeoni, passionné par la mer, la Fondation Race for Water est une organisation dédiée à la préservation des océans. </p>
+    <div class="container">
+        <h2>Race for water, c'est quoi ?</h2>
+        <p>Créée en 2010 par Marco Simeoni, passionné par la mer, la Fondation Race for Water est une organisation dédiée à la préservation des océans. </p> <br>
+        <p> Connue pour ses Odyssées mondiales à bord de navires révolutionnaires au service des océans, la Fondation étudie, depuis plus de 10 ans, l’impact de la pollution plastique sur les écosystèmes et la santé humaine, tout en apportant aux communautés locales des solutions pertinentes afin d'empêcher les déchets plastiques d’atteindre les cours d’eau. </p>
+    </div>
+</section>
 
-    <p> Connue pour ses Odyssées mondiales à bord de navires révolutionnaires au service des océans, la Fondation étudie, depuis plus de 10 ans, l’impact de la pollution plastique sur les écosystèmes et la santé humaine, tout en apportant aux communautés locales des solutions pertinentes afin d'empêcher les déchets plastiques d’atteindre les cours d’eau. </p>
+<section class="activites">
+    <h2>ses activités</h2>
+    <div class="container">
+        <div class="activite act">
+            <h3>Agir</h3>
+            <p>Enquêter sur le terrain auprès des experts scientifiques.</p>
+            <a href="https://www.raceforwater.org/fr/">Plus de détails</a>
+        </div>
+
+        <div class="activite share">
+            <h3>Partager</h3>
+            <p>Alerter les décideurs, sensibiliser le grand public, et éduquer les jeunes générations.</p>
+            <a href="https://www.raceforwater.org/fr/">Plus de détails</a>
+        </div>
+
+        <div class="activite learn">
+            <h3>Apprendre</h3>
+            <p>Promouvoir des solutions aux impacts économiques, environnementaux et sociaux durables.</p>
+            <a href="https://www.raceforwater.org/fr/">Plus de détails</a>
+        </div>
+</section>
+    
+    <script src="script.js"></script>
+</body>
+</html><!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mer Made</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+</head>
+<body class="manrope">
+<div class="accueil">
+    <h1>Mer Made</h1>
+</div>
+
+<section class="about">
+    <img src="images/poissons.svg" alt="">
+    <div class="container">
+        <h2>Race for water, c'est quoi ?</h2>
+        <p>Créée en 2010 par Marco Simeoni, passionné par la mer, la Fondation Race for Water est une organisation dédiée à la préservation des océans. </p> <br>
+        <p> Connue pour ses Odyssées mondiales à bord de navires révolutionnaires au service des océans, la Fondation étudie, depuis plus de 10 ans, l’impact de la pollution plastique sur les écosystèmes et la santé humaine, tout en apportant aux communautés locales des solutions pertinentes afin d'empêcher les déchets plastiques d’atteindre les cours d’eau. </p>
+    </div>
+</section>
+
+<section class="activites">
+    <h2>ses activités</h2>
+    <div class="container">
+        <div class="activite act">
+            <h3>Agir</h3>
+            <p>Enquêter sur le terrain auprès des experts scientifiques.</p>
+            <a href="https://www.raceforwater.org/fr/">Plus de détails</a>
+        </div>
+
+        <div class="activite share">
+            <h3>Partager</h3>
+            <p>Alerter les décideurs, sensibiliser le grand public, et éduquer les jeunes générations.</p>
+            <a href="https://www.raceforwater.org/fr/">Plus de détails</a>
+        </div>
+
+        <div class="activite learn">
+            <h3>Apprendre</h3>
+            <p>Promouvoir des solutions aux impacts économiques, environnementaux et sociaux durables.</p>
+            <a href="https://www.raceforwater.org/fr/">Plus de détails</a>
+        </div>
 </section>
     
     <script src="script.js"></script>
