--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
 
         <div class="sirene">
             <p>Sirène img svg</p>
-            <button class="part brain active">Cerveau</button>
+            <button class="part heart active">Coeur</button>
             <button class="part lungs active">Poumons</button>
             <button class="part skin active">Peau</button>
         </div>
