--- a/game.html
+++ b/game.html
@@ -5,11 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./accordion.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+    rel="stylesheet"/>
 </head>
 
 <body>
     <header>
-        <nav></nav>
+        <nav>
+            <ul> 
+                <div class="bgNav">
+                    <div class="non-active">
+                        <li><a href="index.html" class="blue">Accueil</a></li>
+                    </div>
+                    <div class="active">
+                        <li><a href="game.html" class="deepBlue">Jeu</a></li>
+                        <img src="images/queuSirene.svg" alt="">
+                    </div>
+                </div>
+                
+            </ul>
+        </nav>
     </header>
 
     <h1></h1>
