--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
     />
   </head>
   <body class="manrope">
+    <header>
+        <nav>
+            <ul> 
+                <div class="bgNav">
+                    <div class="active">
+                        <img src="images/poisson.svg" alt="">
+                        <li><a href="index.html" class="deepBlue">Accueil</a></li>
+                    </div>
+                    <div class="non-active">
+                        <li><a href="game.html" class="blue">Jeu</a></li>
+                    </div>
+                </div>
+                
+            </ul>
+        </nav>
+    </header>
     <div class="accueil">
       <h1>Mer Made</h1>
     </div>
