--- a/game.html
+++ b/game.html
@@ -19,9 +19,9 @@
 
         <div class="sirene">
             <p>Sirène img svg</p>
-            <button class="part heart active">Coeur</button>
-            <button class="part lungs active">Poumons</button>
-            <button class="part skin active">Peau</button>
+            <button class=" heart active">Coeur</button>
+            <button class=" lungs active">Poumons</button>
+            <button class=" skin active">Peau</button>
         </div>
         <!-- Situation -->
         <div class="situation">
