--- a/fin.html
+++ b/fin.html
@@ -10,7 +10,7 @@
     <h1 id="fin">Fin</h1>
     <p id="score">Score : </p>
     <p id="texte"></p>
-
+    <a href="index.html">Retour à l'accueil</a>
     <script src="fin.js"></script>
 </body>
 </html>
