--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./accordion.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
@@ -15,7 +16,9 @@
   </head>
   <body class="manrope">
     <div class="accueil">
+      <img src="images/bulles.svg" alt="" class="bulles">
       <h1>Mer Made</h1>
+      <img src="images/bulles2.svg" alt="" class="bulles2">
     </div>
 
     <section class="about">
@@ -43,13 +46,13 @@
       <h2>ses activités</h2>
       <div class="container">
         <div class="activite act">
-          <h3>Agir</h3>
+          <h3 class="montserrat">Agir</h3>
           <p>Enquêter sur le terrain auprès des experts scientifiques.</p>
           <a href="https://www.raceforwater.org/fr/">Plus de détails</a>
         </div>
 
         <div class="activite share">
-          <h3>Partager</h3>
+          <h3 class="montserrat">Partager</h3>
           <p>
             Alerter les décideurs, sensibiliser le grand public, et éduquer les
             jeunes générations.
@@ -58,7 +61,7 @@
         </div>
 
         <div class="activite learn">
-          <h3>Apprendre</h3>
+          <h3 class="montserrat">Apprendre</h3>
           <p>
             Promouvoir des solutions aux impacts économiques, environnementaux
             et sociaux durables.
