--- a/api.html
+++ b/api.html
@@ -9,35 +9,21 @@
 </head>
 
 <body>
-    <div class="loader">
-        <div class="block"></div>
-        <div class="ocean">
-            <div class="vagues">
-                <div class="vague" id="vague1"></div>
-                <div class="vague" id="vague2"></div>
-                <div class="vague" id="vague3"></div>
-            </div>
+    <div class="block"></div>
+    <div class="ocean">
+        <img src="bateau.svg" alt="" width="100px" class="bateau">
+        <div class="vagues">
+            <div class="vague" id="vague1"></div>
+            <div class="vague" id="vague2"></div>
+            <div class="vague" id="vague3"></div>
         </div>
         <h1>Informations météorologiques</h1>
-        <p id="texte"></p>
+        <p id="meteo"></p>
         <div class="continuite"></div>
     </div>
 
-    <script>
-        const animation = [
-            { transform: "scaleY(0.6)" },
-            { transform: "scaleY(1)"},
-            { transform: "scaleY(0.6)" }
-        ]
-        const timing = {
-            duration: 3600,
-            iterations: Infinity,
-        }
-
-        document.querySelector('.vagues').style.transformOrigin='bottom'
-        document.querySelector('.vagues').animate(animation,timing)
-
-        document.getElementById('texte').innerHTML = 'Hauteur des vagues le 06/12/2024 :<br>0.6 m';
+    <script src="api.js">
+        
     </script>
 </body>
 
