--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
       </div>
     </section>
 
+    <section class="apropos">
+      <h2>À propos</h2>
+      <div class="container">
+        <p>La nuit de l’info est un événement national où étudiants se réunissent pour relever un défi unique : créer une application web en une seule nuit.</p>
+        <h3>Crédits</h3>
+        <p>Ce site a été réalisé par des étudiants en deuxième année à Champs-sur-Marne dans le cadre de la nuit de l’info.</p>
+        <p><strong>Développement web :</strong> Emilie Desgranges, Gaël  Grandval, Andréa Caneval, Clara Moubarak, Noor Da Silva</p>
+        <p><strong>Création numérique </strong>: Eve Goncalves, Alyssa Karahan, Mélissa Cumur</p>
+      </div>
+    </section>
+
     <section class="faq">
       <h2>FAQ</h2>
       <div class="accordion-grid">
