--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
         </div>
       </div>
     </section>
-    <footer>
+
+    <section class="api">
       <div class="block"></div>
       <div class="ocean">
           <img src="images/bateau.svg" alt="" width="100px" class="bateau">
@@ -194,7 +195,7 @@
           <p id="meteo"></p>
           <div class="continuite"></div>
       </div>
-  </footer>
+    </section>
 
   <script src="api.js"></script>
     <script src="./script.js"></script>
