page accueil update

--- a/index.html
+++ b/index.html
@@ -54,8 +54,16 @@
           humaine, tout en apportant aux communautés locales des solutions
           pertinentes afin d'empêcher les déchets plastiques d’atteindre les
           cours d’eau.
-        </p>
+        </p> <br><br><br>
+
+        <p class="quote"><em>"L’océan stabilise le climat, absorbe le carbone, et atténue les effets du changement climatique, préservant l’équilibre planétaire."</em></p><br><br><br>
+
+        <p>Dès 2024, la Fondation Race for Water reprendra ses opérations à bord d’un nouveau catamaran révolutionnaire «zéro émission de CO2», le MODX 70. Déployée sur de multiples missions, cette prochaine Odyssée engagera la Fondation sur une nouvelle thématique : les océans et le changement climatique. À travers son programme « Learn, Share, Act », elle démontrera l’importance de décarboner le monde maritime et de préserver un océan sain et vivant.</p><br><br><br><br><br><br>
+        <img src="images/bateau.svg" alt="" class="bateau">
+
+
       </div>
+
     </section>
 
     <section class="activites">
