--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@
     </div>
   </section>
 
-  <script src="api.js"></script>
+  <script>
+    console.log('toto')
+  </script>
+  <script src="./api.js"></script>
   <script src="./script.js"></script>
   <script src="./accordion.js"></script>
 </body>
