--- a/game.html
+++ b/game.html
@@ -33,9 +33,7 @@
         </nav>
     </header>
 
-    <h1>Mer Maid Game</h1>
-
-
+    <h1 class="titre">Soignez la Sirène</h1>
     <div class="sirene">
         <div class="box">
             <svg width="500" height="900" viewBox="0 1400 5653 6617" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -294,6 +292,7 @@
     <!-- Situation -->
     <div class="situation">
         <img src="img/situation/statistiques-oceans-developpement-durable.jpg" alt="">
+        <div class="organe"></div>
         <div class="txt-game">
             <p></p>
         </div>
