--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
         humaine, tout en apportant aux communautés locales des solutions
         pertinentes afin d'empêcher les déchets plastiques d'atteindre les
         cours d'eau.
-      </p>
+      </p> <br><br><br>
+      <p class="quote"><em>"L’océan stabilise le climat, absorbe le carbone, et atténue les effets du changement climatique, préservant l’équilibre planétaire."</em></p><br><br><br>
+
+      <p>Dès 2024, la Fondation Race for Water reprendra ses opérations à bord d’un nouveau catamaran révolutionnaire «zéro émission de CO2», le MODX 70. Déployée sur de multiples missions, cette prochaine Odyssée engagera la Fondation sur une nouvelle thématique : les océans et le changement climatique. À travers son programme « Learn, Share, Act », elle démontrera l’importance de décarboner le monde maritime et de préserver un océan sain et vivant.</p><br><br><br><br><br><br>
+      <img src="images/bateau.svg" alt="" class="bateau">
+
     </div>
   </section>
 
@@ -78,20 +83,11 @@
 
       <div class="activite learn">
         <h3 class="montserrat">Apprendre</h3>
-        <p>
-          Connue pour ses Odyssées mondiales à bord de navires révolutionnaires
-          au service des océans, la Fondation étudie, depuis plus de 10 ans,
-          l’impact de la pollution plastique sur les écosystèmes et la santé
-          humaine, tout en apportant aux communautés locales des solutions
-          pertinentes afin d'empêcher les déchets plastiques d’atteindre les
-          cours d’eau.
-        </p> <br><br><br>
+        <p>Promouvoir des solutions aux impacts économiques, environnementaux et sociaux durables</p>
+        <a href="https://www.raceforwater.org/fr/">Plus de détails</a>
 
-        <p class="quote"><em>"L’océan stabilise le climat, absorbe le carbone, et atténue les effets du changement climatique, préservant l’équilibre planétaire."</em></p><br><br><br>
 
-        <p>Dès 2024, la Fondation Race for Water reprendra ses opérations à bord d’un nouveau catamaran révolutionnaire «zéro émission de CO2», le MODX 70. Déployée sur de multiples missions, cette prochaine Odyssée engagera la Fondation sur une nouvelle thématique : les océans et le changement climatique. À travers son programme « Learn, Share, Act », elle démontrera l’importance de décarboner le monde maritime et de préserver un océan sain et vivant.</p><br><br><br><br><br><br>
-        <img src="images/bateau.svg" alt="" class="bateau">
-
+       
 
       </div>
 
