--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </svg>
           </button>
           <p>
-            Grâce au vaudou. Notre équipe de sorciers écoresponsables s'est donné bien du mal pour concocter un sortilège de suggestion aussi puissant et l'intégrer dans ce site. Ayez pitié de nous.
+            Grâce au vaudou. Notre équipe de sorciers écoresponsables s'est donné bien du mal pour concocter un sortilège de suggestion aussi puissant et l'intégrer dans ce site. (Jouez le jeu s'il-vous-plaît, ayez pitié de nous.)
           </p>
         </div>
       </div>
