--- a/game.html
+++ b/game.html
@@ -293,6 +293,7 @@
     <!-- Situation -->
     <div class="situation">
         <div class="txt-game">
+            <div class="organe"></div>
             <p></p>
         </div>
         <div class="choice">
