--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body class="manrope">
   <header>
     <nav>
+      <a href="#content" class="evitement">Aller au contenu</a>
       <ul>
         <div class="bgNav">
           <div class="active">
@@ -40,7 +41,7 @@
   <section class="about">
     <img src="images/poissons.svg" alt="" />
     <div class="container">
-      <h2>Race for water, c'est quoi ?</h2>
+      <h2 id="content">Race for water, c'est quoi ?</h2>
       <p>
         Créée en 2010 par Marco Simeoni, passionné par la mer, la Fondation
         Race for Water est une organisation dédiée à la préservation des
@@ -98,7 +99,7 @@
     <div class="container">
       <p>La nuit de l’info est un événement national où étudiants se réunissent pour relever un défi unique&nbsp;: créer une
         application web en une seule nuit.</p>
-      <h3>Crédits</h3>
+      <h3 class="montserrat">Crédits</h3>
       <p>Ce site a été réalisé par des étudiants en deuxième année à Champs-sur-Marne dans le cadre de la nuit de
         l’info.</p>
       <p><strong>Développement web&nbsp;:</strong> Emilie Desgranges, Gaël Grandval, Andréa Caneval, Clara Moubarak, Noor Da
@@ -164,7 +165,7 @@
         <div class="vague" id="vague2"></div>
         <div class="vague" id="vague3"></div>
       </div>
-      <h1>Informations météorologiques</h1>
+      <h2>Informations météorologiques</h2>
       <p id="meteo"></p>
       <div class="continuite"></div>
     </div>
