--- a/game.html
+++ b/game.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
     rel="stylesheet"/>
+    <link rel=" icon" href="images/poisson.svg" type="">
 </head>
 
 <body class="manrope">
@@ -34,7 +35,7 @@
     </header>
 
     <h1 class="titre">Soignez la Sirène</h1>
-    <div class="sirene">
+      <div class="sirene">
         <div class="box">
             <svg width="500" height="900" viewBox="0 1400 5653 6617" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
