--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet" />
+  <link rel=" icon" href="images/poisson.svg" type="">
 </head>
 
 <body class="manrope">
@@ -20,13 +21,13 @@
       <a href="#content" class="evitement">Aller au contenu</a>
       <ul>
         <div class="bgNav">
-          <div class="active">
-            <img src="images/poisson.svg" alt="">
-            <li><a href="index.html" class="deepBlue">Accueil</a></li>
-          </div>
-          <div class="non-active">
-            <li><a href="game.html" class="blue">Jeu</a></li>
-          </div>
+            <div class="active">
+                <img src="images/poisson.svg" alt="">
+                <li><a href="index.html" class="deepBlue">Accueil</a></li>
+            </div>
+            <div class="non-active">
+                <li><a href="game.html" class="blue">Jeu</a></li>
+            </div>
         </div>
 
       </ul>
