--- a/game.html
+++ b/game.html
@@ -35,6 +35,7 @@
     </header>
 
     <h1 class="titre">Soignez la Sirène</h1>
+    <p>Cliquez sur les parties de son corps pour comprendre les conséquences de tes actes sur les océans</p>
       <div class="sirene">
         <div class="box">
             <svg width="500" height="900" viewBox="0 1400 5653 6617" fill="none" xmlns="http://www.w3.org/2000/svg">
