--- a/game.html
+++ b/game.html
@@ -34,8 +34,9 @@
         </nav>
     </header>
 
-    <h1 class="titre">Soignez la Sirène</h1>
-    <p>Cliquez sur les parties de son corps pour comprendre les conséquences de tes actes sur les océans</p>
+    <h1 class="titre">Sauvez Océane</h1>
+    <p class="p-game">Océane, déesse des mers et des océans, est physiquement liée à son environnement. Elle protège les fonds marins de la pollution humaine. Dans la vie de tous les jours, tu fais des choix qui ont un impact. <br>
+    Clique sur les parties de son corps pour découvre les conséquences de tes actes sur les océans.</p>
       <div class="sirene">
         <div class="box">
             <svg width="500" height="900" viewBox="0 1400 5653 6617" fill="none" xmlns="http://www.w3.org/2000/svg">
